Various fixes - mostly error/exception handling